Added link on github pages to go back to source code repository

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -8,7 +8,9 @@
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+    <div style="margin: 10px 0px 10px 5px">
+        <a href="https://github.com/shmurthy08/RBlockly" target="_blank"><img src='https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg' alt='github' height='13'> View Source Code on GitHub</a>
+    </div>
     <div style="display: flex; height: 100vh;">
         <!-- Left half (75% of screen width): Blockly workspace -->
         <div id="blocklyDiv" class="custom-blockly" style="flex: 3;"></div>
