--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -1,3 +1,5 @@
+<!-- MILESTONE 1 FILE -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +13,7 @@
     <div style="margin: 10px 0px 10px 5px">
         <a href="https://github.com/shmurthy08/RBlockly" target="_blank"><img src='https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg' alt='github' height='13'> View Source Code on GitHub</a>
     </div>
-    <div style="display: flex; height: 100vh;">
+    <div style="display: flex; height: 95vh;">
         <!-- Left half (75% of screen width): Blockly workspace -->
         <div id="blocklyDiv" class="custom-blockly" style="flex: 3;"></div>
 
@@ -31,26 +33,26 @@
         // Wait for the Blockly library to load before creating the workspace
         document.addEventListener("DOMContentLoaded", function () {
             // Empty block definition
-            Blockly.defineBlocksWithJsonArray([
-                {
-                    "type": "empty_block",
-                    "message0": "%1",
-                    "args0": [
-                    {
-                        "type": "field_number",
-                        "name": "NUM",
-                        "value": 0
-                    }
-                    ],
-                    "output": "Number",
-                    "inputsInline": false, // Disallow inline connections
-                    "previousStatement": null, // No previous connections
-                    "nextStatement": null, 
-                    "colour": 90,
-                    "tooltip": "Add a number",
-                    "helpUrl": ""
-                }
-            ]);
+            // Blockly.defineBlocksWithJsonArray([
+            //     {
+            //         "type": "empty_block",
+            //         "message0": "%1",
+            //         "args0": [
+            //         {
+            //             "type": "field_number",
+            //             "name": "NUM",
+            //             "value": 0
+            //         }
+            //         ],
+            //         "output": "Number",
+            //         "inputsInline": false, // Disallow inline connections
+            //         "previousStatement": null, // No previous connections
+            //         "nextStatement": null, 
+            //         "colour": 90,
+            //         "tooltip": "Add a number",
+            //         "helpUrl": ""
+            //     }
+            // ]);
 
             // Initialize block definition
             Blockly.defineBlocksWithJsonArray([
@@ -72,7 +74,7 @@
                     "output": "Variable",
                     "inputsInline": true,
                     "previousStatement": null,
-                    "nextStatement": null,
+                    // "nextStatement": null,
                     "colour": 270,
                     "tooltip": "Initialize a variable in R",
                     "helpUrl": ""
@@ -99,7 +101,7 @@
                     "output": "Array",
                     "inputsInline": true,
                     "previousStatement": null,
-                    "nextStatement": null,
+                    // "nextStatement": null,
                     "colour": 210,
                     "tooltip": "Initialize a list in R",
                     "helpUrl": ""
@@ -110,7 +112,7 @@
             Blockly.defineBlocksWithJsonArray([
                 {
                     "type": "calculate_mean",
-                    "message0": "Mean %1 of %2 list",
+                    "message0": "Mean %1 of %2",
                     "args0": [
                         {
                             "type": "field_input",
@@ -118,15 +120,15 @@
                             "text": "var_name"
                         },
                         {
-                            "type": "input_value",
+                            "type": "input_statement",
                             "name": "LIST_NAME",
                             "text": "list",
                             "check": "Array" 
                         }
                     ],
                     "output": "Number",
-                    "previousStatement": null,
-                    "nextStatement": null,
+                    // "previousStatement": null,
+                    // "nextStatement": null,
                     "colour": 180,
                     "tooltip": "Calculate the mean of a list in R",
                     "helpUrl": ""
@@ -137,7 +139,7 @@
             Blockly.defineBlocksWithJsonArray([
                 {
                     "type": "calculate_median",
-                    "message0": "Median %1 of %2 list",
+                    "message0": "Median %1 of %2",
                     "args0": [
                         {
                             "type": "field_input",
@@ -145,15 +147,15 @@
                             "text": "var_name"
                         },
                         {
-                            "type": "input_value",
+                            "type": "input_statement",
                             "name": "LIST_NAME",
                             "text": "list",
                             "check": "Array" 
                         }
                     ],
                     "output": "Number",
-                    "previousStatement": null,
-                    "nextStatement": null,
+                    // "previousStatement": null,
+                    // "nextStatement": null,
                     "colour": 180,
                     "tooltip": "Calculate the median of a list in R",
                     "helpUrl": ""
@@ -164,7 +166,7 @@
             Blockly.defineBlocksWithJsonArray([
                 {
                     "type": "calculate_mode",
-                    "message0": "Mode %1 of %2 list",
+                    "message0": "Mode %1 of %2",
                     "args0": [
                         {
                             "type": "field_input",
@@ -172,15 +174,15 @@
                             "text": "var_name"
                         },
                         {
-                            "type": "input_value",
+                            "type": "input_statement",
                             "name": "LIST_NAME",
                             "text": "list",
                             "check": "Array" 
                         }
                     ],
                     "output": "Number",
-                    "previousStatement": null,
-                    "nextStatement": null,
+                    // "previousStatement": null,
+                    // "nextStatement": null,
                     "colour": 180,
                     "tooltip": "Calculate the mode of a list in R"
                 }
@@ -190,7 +192,7 @@
             Blockly.defineBlocksWithJsonArray([
                 {
                     "type": "calculate_range",
-                    "message0": "Range %1 of %2 list",
+                    "message0": "Range %1 of %2",
                     "args0": [
                         {
                             "type": "field_input",
@@ -198,15 +200,15 @@
                             "text": "var_name"
                         },
                         {
-                            "type": "input_value",
+                            "type": "input_statement",
                             "name": "LIST_NAME",
                             "text": "list",
                             "check": "Array" 
                         }
                     ],
                     "output": "Number",
-                    "previousStatement": null,
-                    "nextStatement": null,
+                    // "previousStatement": null,
+                    // "nextStatement": null,
                     "colour": 180,
                     "tooltip": "Calculate range of a list in R"
                 }
@@ -215,7 +217,7 @@
             // Create blockly workspace
             workspace = Blockly.inject('blocklyDiv', {
                 media: 'https://unpkg.com/blockly@5.1.0/media/',
-                toolbox: '<xml id="toolbox" style="display: none"><block type="empty_block"></block><block type="r_variable"></block><block type="initialize_list"></block><block type="calculate_mean"></block><block type="calculate_median"></block><block type="calculate_mode"></block><block type="calculate_range"></block></xml>'
+                toolbox: '<xml id="toolbox" style="display: none"></block><block type="r_variable"></block><block type="initialize_list"></block><block type="calculate_mean"></block><block type="calculate_median"></block><block type="calculate_mode"></block><block type="calculate_range"></block></xml>'
             });
         });
     </script>
