Added the sum() function
Added the sum() function to the Aggregate block dropdown

--- a/src/design-blocks/index.html
+++ b/src/design-blocks/index.html
@@ -229,6 +229,7 @@
                         [ "Median", "MEDIAN" ],
                         [ "Mode", "MODE" ],
                         [ "Range", "RANGE" ],
+                        [ "Sum", "SUM" ]
                     ]
                 },
                 {
